<resources>
    <string name="app_name">SchoolApp</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="birth_date">Birth Date</string>
    <string name="select_birth_date">Select birth date</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter address</string>
    <string name="phone">Phone</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="specialty">Specialty</string>
    <string name="role">Role</string>
    <string name="Teacher">Teacher</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="enter_phone_number_starts_05">Enter phone number starts (05)</string>
    <string name="city">City</string>
    <string name="calendar_icon">calendar_icon</string>
    <string name="dropdown_icon">dropdown_icon</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="select_role">Select Role</string>
    <string name="teacher_name">Teacher Name:</string>
    <string name="id">ID</string>
    <string name="grade">Grade</string>
    <string name="subject">Subject</string>
    <string name="day">Day</string>
    <string name="start_time">start_time_e_g_08_00</string>
    <string name="end_time">end_time_e_g_09_00</string>
    <string name="day_monday">Day: Monday</string>
    <string name="start_08_00">Start: 08:00</string>
    <string name="end_09_00">End: 09:00</string>
    <string name="subject_id_1">Subject ID: 1</string>
    <string name="class_id_1">Class ID: 1</string>
    <string name="password">Password</string>
    <string name="enter_password_at_least_8_charachters">Enter password at least 8 charachters</string>
    <string name="send_assignments">Send Assignments</string>
    <string name="title">Title</string>
    <string name="enter_assignment_title">Enter Assignment Title</string>
    <string name="select_class">Select Class</string>
    <string name="details">Details</string>
    <string name="enter_assignment_details">Enter Assignment Details</string>
    <string name="attachments">Attachments</string>
    <string name="select_file">Select File</string>
    <string name="deadline">Deadline</string>
    <string name="select_deadline">Select Deadline</string>
    <string name="send">Send</string>
    <string name="percentage_of_grade">Percentage of Grade</string>
    <string name="e_g_20_0">e.g., 20.0</string>
    <string name="submit_assignment">Submit Assignment</string>
    <string name="class_select_student">Class</string>
    <string name="assignment_select_student">Assignment</string>
    <string name="submit_assignment_student">Submit</string>
    <string name="select_subject">Select subject</string>
    <string name="Class">Class</string>
    <string name="class_name">Class Name</string>
    <string name="semester">Semester</string>
    <string name="subject_name">Subject Name:</string>
    <string name="enter_subject_name">Enter subject name</string>
    <string name="assign_grade">Assign Grade:</string>
    <string name="cancel_sub">Cancel</string>
    <string name="add_sub">Add</string>
    <string name="add_subject">Add Subject</string>
    <string name="assignment_title">Assignment Title</string>
    <string name="deadline_list">Deadline</string>
    <string name="assignment_details">Assignment Details</string>
    <string name="class_details">Class</string>
    <string name="title_details">Title</string>
    <string name="deadline_details">Deadline</string>
    <string name="assignment_details_details">Assignment Details:</string>
    <string name="assignments">Assignments</string>
    <string name="open_attached_file">Open Attached File</string>
    <string name="teacher_classes">Teacher Classes</string>
    <string name="class_id">Class ID: 12</string>
    <string name="manager_id">Manager ID: 5</string>
    <string name="class_grade_10_a">Class: Grade 10 - A</string>
    <string name="teachers">Teachers</string>
    <string name="schedule">Schedule</string>
    <string name="students">Students</string>
    <string name="exams">Exams</string>
    <string name="attendance">Attendance</string>
    <string name="assignments_exams">Assignments/Exams</string>
    <string name="student_name">Student Name</string>
    <string name="send_message">Send Message</string>
    <string name="user">User</string>
    <string name="class_schedule">Class Schedule</string>
    <string name="new_assignment">New Assignment</string>
    <string name="exam_marks">Exam Marks</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="class_students">Class Students</string>
    <string name="class_subjects">Class Subjects</string>
    <string name="subject_title">Subject Title</string>
    <string name="enter_student_marks">Enter student marks</string>
    <string name="publish_results">Publish Results</string>
    <string name="exam_date_yyyy_mm_dd">Exam Date (YYYY-MM-DD)</string>
    <string name="exam_title">Exam Title</string>
    <string name="class_x">Class: X</string>
    <string name="mark">Mark</string>
    <string name="exam_date">Exam Date</string>
    <string name="duration">Duration</string>
    <string name="exam_percentage">Exam Percentage</string>
    <string name="subject_name_assignment">"Subject "</string>
    <string name="subject_assignment_details">Subject</string>
    <string name="deadline_radio">Deadline</string>
    <string name="subject_radio">Subject</string>
    <string name="title_radio">Title</string>
    <string name="search_by_title_or_subject">Search by title or subject</string>
    <string name="asc_radio_list">Asc</string>
    <string name="desc_radio_list">Desc</string>
    <string name="back">Back</string>
    <string name="personal_information">Personal Information</string>
    <string name="contact_details">Contact Details</string>
    <string name="account_amp_role_details"><![CDATA[Account & Role Details]]></string>
    <string name="assignment_details_send">Assignment Details</string>
    <string name="percentage_amp_deadline"><![CDATA[Percentage & Deadline]]></string>
    <string name="reminder_time_label">Reminder Time</string>
    <string name="select_reminder_time">Select Reminder Time</string>
    <string name="submission_details">Submission Details</string>
    <string name="student_courses">Student Courses</string>
    <string name="student_name_roaa">Student Name: Roaa</string>
    <string name="id_123456">ID: 123456</string>
    <string name="subject_name_tv">Subject Name</string>
    <string name="_85">85%</string>
    <string name="midterm">Midterm</string>
    <string name="subject_math">Subject: Math</string>
    <string name="view_marks_TV">View Marks</string>
    <string name="back_to_profile">Back to Profile</string>
    <string name="back_to_student_courses">Back to Courses</string>
    <string name="all_RB">All</string>
    <string name="assignments_RB">Assignments</string>
    <string name="exams_RB">Exams</string>
    <string name="total">Total:</string>
    <string name="select_exam">Select Exam</string>
    <string name="add_exam">Add Exam</string>
    <string name="manage_your_school_life_in_one_place">Manage your school life in one place</string>
    <string name="welcome_to_the_school_app">Welcome to the School App</string>
    <string name="school_logo">School Logo</string>
    <string name="placeholder_name">Placeholder Name</string>

    <string name="back_to_profile_bt">Back to profile</string>
    <string name="teachers_rb">Teachers</string>
    <string name="students_rb">Students</string>
    <string name="subjects_rb">Subjects</string>
    <string name="delete_center">Delete Center</string>

</resources>