<?xml version="1.0" encoding="utf-8"?>
<!-- step_address_contact.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- City and Address -->
    <TextView style="@style/SectionTitle" android:text="@string/city" />
    <EditText
        android:id="@+id/editCity"
        style="@style/FormEditText"
        android:hint="@string/enter_city_name"
        android:inputType="textPostalAddress" />

    <TextView style="@style/SectionTitle" android:text="@string/address" android:layout_marginTop="16dp" />
    <EditText
        android:id="@+id/editAddress"
        style="@style/FormEditText"
        android:hint="@string/enter_address"
        android:inputType="textPostalAddress" />

    <!-- Phone -->
    <TextView style="@style/SectionTitle" android:text="@string/phone" android:layout_marginTop="16dp" />
    <EditText
        android:id="@+id/editPhone"
        style="@style/FormEditText"
        android:hint="@string/enter_phone_number_starts_05"
        android:inputType="phone" />

    <!-- Password -->
    <TextView style="@style/SectionTitle" android:text="@string/password" android:layout_marginTop="16dp" />
    <EditText
        android:id="@+id/editPassword"
        style="@style/FormEditText"
        android:hint="@string/enter_password_at_least_8_charachters"
        android:inputType="textPassword" />

</LinearLayout>