<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="#FFF"
    android:layout_marginBottom="8dp">

    <TextView android:id="@+id/tvDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_monday" />

    <TextView android:id="@+id/tvStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_08_00" />

    <TextView android:id="@+id/tvEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_09_00" />

    <TextView android:id="@+id/tvSubjectId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject_id_1" />

    <TextView android:id="@+id/tvClassId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_id_1" />
</LinearLayout>
