<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Top Orange Bar with Title -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:paddingTop="8dp"
        android:background="@color/role_orange">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             />

        <TextView
            android:id="@+id/titleText"
            style="@style/HeaderTitle"
            android:text="@string/add_teacher" />
    </FrameLayout>

    <!-- Scrollable Form Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <!-- Full Name Fields -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">

                <!-- First Name -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginEnd="16dp">

                    <TextView
                        style="@style/FormLabel"
                        android:text="@string/first_name" />

                    <EditText
                        android:id="@+id/editFirstName"
                        style="@style/FormEditText"
                        android:hint="@string/enter_first_name"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <!-- Last Name -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/FormLabel"
                        android:text="@string/last_name" />

                    <EditText
                        android:id="@+id/editLastName"
                        style="@style/FormEditText"
                        android:hint="@string/enter_last_name"
                        android:inputType="textPersonName" />
                </LinearLayout>
            </LinearLayout>

            <!-- Birth Date -->
            <TextView
                style="@style/SectionTitle"
                android:text="@string/birth_date"
                android:layout_marginTop="24dp" />

            <LinearLayout
                android:id="@+id/birthDateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/edittext_border"
                android:padding="8dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/editBirthDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/select_birth_date"
                    android:inputType="none"
                    android:focusable="false"
                    android:background="@android:color/transparent"
                    android:padding="0dp" />

                <ImageView
                    android:id="@+id/iconCalendar"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/calendar"
                    android:contentDescription="@string/calendar_icon"
                    android:layout_marginStart="8dp" />
            </LinearLayout>


            <!-- City and Address -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">

                <!-- City -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginEnd="16dp">

                    <TextView style="@style/FormLabel" android:text="@string/city" />
                    <EditText
                        android:id="@+id/editCity"
                        style="@style/FormEditText"
                        android:hint="@string/enter_city_name"
                        android:inputType="textPostalAddress" />
                </LinearLayout>

                <!-- Address -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView style="@style/FormLabel" android:text="@string/address" />
                    <EditText
                        android:id="@+id/editAddress"
                        style="@style/FormEditText"
                        android:hint="@string/enter_address"
                        android:inputType="textPostalAddress" />
                </LinearLayout>
            </LinearLayout>

            <!-- Phone -->
            <TextView
                style="@style/SectionTitle"
                android:text="@string/phone"
                android:layout_marginTop="24dp" />
            <EditText
                android:id="@+id/editPhone"
                style="@style/FormEditText"
                android:hint="@string/enter_phone_number_starts_05"
                android:inputType="phone" />

            <!-- Specialty -->
            <TextView
                style="@style/SectionTitle"
                android:text="@string/specialty"
                android:layout_marginTop="24dp" />

            <LinearLayout
                android:id="@+id/spinnerContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/edittext_border"
                android:padding="8dp"
                android:gravity="center_vertical">

                <Spinner
                    android:id="@+id/spinnerSpecialty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:padding="0dp"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/spinner_arrow"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/dropdown_icon" />
            </LinearLayout>

            <!-- Password -->
            <TextView
                style="@style/SectionTitle"
                android:text="@string/password"
                android:layout_marginTop="24dp" />
            <EditText
                android:id="@+id/editPassword"
                style="@style/FormEditText"
                android:hint="@string/enter_password_at_least_8_charachters"
                android:inputType="textPassword" />

            <!-- Role -->
            <TextView
                style="@style/SectionTitle"
                android:text="@string/role"
                android:layout_marginTop="24dp" />
            <TextView
                android:id="@+id/textRole"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#EEEEEE"
                android:padding="8dp"
                android:text="@string/Teacher" />

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="32dp"
                android:gravity="end">

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/ButtonPrimary.Registrar"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btnAdd"
                    style="@style/ButtonPrimary.Registrar"
                    android:text="@string/add"
                    android:layout_marginStart="16dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>