<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/role_blue" />

        <TextView
            android:id="@+id/titleText"
            style="@style/HeaderTitle"
            android:layout_gravity="center"
            android:text="@string/add_exam" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Class"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etExamTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/exam_title"
            android:inputType="text" />

        <EditText
            android:id="@+id/etDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/duration"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/exam_percentage"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etExamDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:drawableEnd="@android:drawable/ic_menu_today"
            android:focusable="false"
            android:hint="@string/exam_date"
            android:inputType="none"
            android:padding="12dp" />

        <Spinner
            android:id="@+id/spSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />


        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/role_blue"
            android:text="@string/add"
            android:textColor="@android:color/white" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>