<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddClassSchedule">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/role_orange">

        <TextView
            android:id="@+id/titleText"
            style="@style/HeaderTitle"
            android:text="@string/add_schedule" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvClass"
                    style="@style/SectionTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/class_name" />

                <TextView
                    android:id="@+id/tvId"
                    style="@style/SectionTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/id" />
            </LinearLayout>

            <TextView
                style="@style/SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subject" />

            <Spinner
                android:id="@+id/spSubject"
                style="@style/FormSpinner"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:spinnerMode="dropdown" />

            <TextView
                style="@style/SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/day" />

            <Spinner
                android:id="@+id/spDay"
                style="@style/FormSpinner"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/etStartTime"
                style="@style/FormEditText"
                android:layout_marginTop="16dp"
                android:hint="@string/start_time"
                android:inputType="time" />

            <EditText
                android:id="@+id/etEndTime"
                style="@style/FormEditText"
                android:layout_marginTop="16dp"
                android:hint="@string/end_time"
                android:inputType="time" />

            <TextView
                style="@style/SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/semester" />

            <Spinner
                android:id="@+id/spSemester"
                style="@style/FormSpinner"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_border"
                    android:backgroundTint="#FFF"
                    android:text="@string/cancel"
                    android:textColor="@color/role_orange" />

                <Button
                    android:id="@+id/btnAddSchedule"
                    style="@style/ButtonPrimary.Registrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/add" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvScheduleItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:padding="8dp" />
        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>
